<resources>
    <string name="app_name">DAPP</string>

    <string name="title_activity_project_list">Proyectos de Inversión Pública</string>
    <string name="title_activity_project_detail">Detalle del Proyecto</string>

    <!--menu-->
    <string name="menu_map">Mapa</string>
    <string name="menu_list">Listado</string>

    <!--Exception messages-->
    <string name="exception_message_generic">Hubo un error de la aplicacion</string>
    <string name="exception_message_no_connection">No hay conexión a internet</string>
    <string name="exception_message_public_investment_project_not_found">No se pudo recuperar información del proyecto. Revisa tu conexión a internet</string>
    <string name="exception_message_cannot_get_information_of_your_ubication">No se pudo obetner información de su ubicación</string>
    <string name="exception_message_there_was_a_error_in_service">Hubo un error con el servicio</string>
    <string name="exception_message_time_out">Tiempo de espera agotado</string>

    <string name="centro_poblado">Centro poblado</string>
    <string name="unidad_formuladora">Unidad formuladora</string>
    <string name="sector">Sector</string>
    <string name="pliego">Pliego</string>
    <string name="ejecutora">Ejecutora</string>
    <string name="codigo_snip">Código SNIP</string>
    <string name="codigo_unico">Código único</string>
    <string name="funcion">Función</string>
    <string name="programa">Programa</string>
    <string name="sub_programa">Sub programa</string>
    <string name="fuente_financiamiento">Fuente financiamiento</string>
    <string name="fecha_registro">Fecha registro</string>
    <string name="situacion">Situacion</string>
    <string name="closed">Cerrado</string>
    <string name="fecha_viab">Fecha viab</string>
    <string name="monto_viable">Monto viable</string>
    <string name="beneficiario">Beneficiario</string>
    <string name="objetivo">Objetivo</string>
    <string name="alternativa">Alternativa</string>
    <string name="costo">Costo</string>

    <string name="currency_x">S/ %1$s</string>
    <string name="gps_not_enabled">GPS no habilitado</string>
    <string name="do_you_want_enable_gps">¿Desea activar el GPS?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="retry">UNDO</string>
    <string name="gps_is_required">Message is deleted</string>
    <string name="there_is_a_bug_in_application">Se produjo un error en la aplicación</string>

    <string name="department">Departamento</string>
    <string name="province">Provincia</string>
    <string name="district">Distrito</string>
    <string name="snip_code">Código SNIP</string>
    <string name="populated_center">Centro poblado</string>
    <string name="cancel">Cancelar</string>
    <string name="apply">Aplicar</string>
    <string name="filter">Filtrar</string>
    <string name="search_filter">Filtrar búsqueda</string>

    <string-array name="aux">
        <item>Chachapoyas 1</item>
        <item>Chachapoyas 2</item>
        <item>Chachapoyas 3</item>
        <item>Chachapoyas 4</item>
    </string-array>
</resources>
